--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <h1>{{ title }}</h1>
 <form #loginForm="ngForm" (ngSubmit)="loginUser(loginForm.value)">
-  <input type="email" required #name="ngModel" pattern="[a-zA-Z]+$" name="name" placeholder="Enter Name" ngModel />
-  <br /> 
-  <span *ngIf="name.invalid && name.touched" style="color: red;" >Please enter a Valid input</span><br />
-  <br />
-  <input type="password" name="password" minlength="2" required #password="ngModel" placeholder="Enter Password" ngModel />
+  <input type="email"   name="name" placeholder="Enter Name" ngModel />
+  <br/> <br/>
+  <input type="password" name="password" required #password="ngModel" placeholder="Enter Password" ngModel />
   <br />
   <span *ngIf="password.invalid && password.touched" style="color: red;" >Please enter a Valid input</span><br />
   <br />
