--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,6 +32,7 @@ hr{
     padding: 10px 15px;
 }
 .product-display-area{
+    
     width: 50%;
     padding: 10px 15px;
 }
@@ -91,15 +92,41 @@ input[type=text], select {
   .btn-delete{
     background-color: #FB5027;
     color: white;
+    cursor:pointer;
+    border: none;
+    border-radius: 4px;
+  }
+
+  .btn-edit{
+    background-color:rgb(23, 195, 233);
+    color: white;
+    cursor:pointer;
+    border: none;
+    border-radius: 4px;
   }
 
   .btn-fetch{
     background-color: #3498DB;
+    width: 30%;
     color: white;
-  }
+    padding: 14px 20px;
+    margin: 8px 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    }
 
   .btn-clear{
     background-color: #F5B041;
     color: white;
+    width: 30%;
+    padding: 14px 20px;
+    margin: 8px 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+
   }
+
+
   
